<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <TextView
        android:id="@+id/title_length_max_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/setting_title_max_length"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/title_max_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_length_max_title"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/body_length_max_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_max_length"
        android:text="@string/setting_body_max_length"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/body_max_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body_length_max_title"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/apply" />

    <TextView
        android:id="@+id/rss_url_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body_max_length"
        android:text="@string/setting_url"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/body_max_length"
        android:text="@string/add" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_button"
        android:layout_below="@+id/add_button"
        android:layout_marginTop="5dp" />

</RelativeLayout>